--- a/index.html
+++ b/index.html
@@ -146,6 +146,46 @@
     </div>
 
 
+    <div class="feedback">
+      <h2>Остались вопросы?</h2>
+      <p class="feedback-tip">Свяжитесь с нами, и мы развеем оставшиеся у вас сомнения!</p>
+
+      <form class="feedback-form" action="/keksby-mail" method="post">
+        <div class="feedback-form-group">
+          <label for="fullname">Представьтесь, пожалуйста:</label>
+          <input id="fullname" type="text" name="fullname">
+        </div>
+        <div class="feedback-form-group">
+          <label for="phone">Контактный телефон:</label>
+          <input id="phone" type="text" name="phone">
+        </div>
+        <div class="feedback-form-group">
+          <label for="email">Электронная почта:</label>
+          <input id="email" type="text" name="email">
+        </div>
+        <div class="checkbox-area">
+          <label>
+            <input type="checkbox" name="subscription" checked>
+            Я согласен получать спам и смс на телефон
+          </label>
+        </div>
+        <div class="feedback-form-group">
+          <label for="topic">Тема обращения:</label>
+          <select id="topic" name="topic">
+            <option value="1">Условия доставки</option>
+            <option value="2">Возврат товара</option>
+            <option value="3">Жалоба в Роспотребнадзор</option>
+          </select>
+        </div>
+        <div class="feedback-form-group">
+          <label for="message">Текст обращения:</label>
+          <textarea id="message" name="message"></textarea>
+        </div>
+        <input class="btn" type="submit" value="Отправить">
+      </form>
+    </div>
+
+
     <div class="page-footer">
       <div class="footer-top">
          <div class="footer-logo">
